# lobster-report

./: .env  .env.example  .gitignore  BOOTSTRAP.md  Dockerfile  IDENTITY.md  PLAN.md  README.md  USER.md  check_weather.py  docker-compose.yml  find_activities.py  get_real_weather.py  goose_long_report.md  package.json  railpack.json  railway.json  railway.toml  requirements.txt  snake_game.py  start.sh  team_recipe.md  tg_goose.py
.openclaw/: workspace-state.json
backend/: Dockerfile  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  setup.py  start.sh
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  alerts.py  dashboard.py  financial.py  forum.py  news.py  world.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: CategoryList.js  Footer.js  ForumHeader.js  ForumList.js  ForumPost.js  ForumPostList.js  Header.js  NewPostForm.js
lobster-report/: README.md  railpack.json
memory/: 2026-04-04.md
蝦報/: README.md  專案結構.txt  架構圖.txt  網站架設指南.md  部署記錄.md
